--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,44 +1,98 @@
 @import "materialize";
 
+body {
+  font-family: "Open Sans", sans-serif;
+}
+
+/** HEADER */
 header {
   height: 100vh;
   background: url(../img/header-bg.jpg) no-repeat no-repeat;
   background-size: cover;
   nav {
     height: 96px;
+    .button-collapse {
+      height: 96px;
+      i {
+        height: 96px;
+        line-height: 96px;
+      }
+    }
   }
   .call-to-action {
     margin-top: 10em;
   }
 }
 
-.nav-wrapper .brand-logo img {
-  height: 96px;
+.nav-wrapper {
+  .brand-logo {
+    img {
+      height: 96px;
+    }
+  }
 }
 
 @media (max-width: 600px) {
   .nav-wrapper .brand-logo img {
-    height: 64px;
+    height: 96px;
   }
 }
 
+@media only screen and (min-width: 601px) {
+  nav {
+    line-height: 96px;
+    .brand-logo {
+      margin-left: 1em;
+    }
+  }
+}
+
+/** TEAM */
+#team {
+  // height: 100vh;
+  padding: 1em;
+  .card-action {
+    display: flex;
+    justify-content: center;
+    a {
+      color: #2196f3;
+      font-size: 1.2em;
+      transition: all 0.5s ease-in-out;
+      &:hover {
+        color: #388e3c;
+        cursor: pointer;
+      }
+    }
+  }
+}
+
+/** PROJECTS */
 #projects {
   hr {
     width: 20%;
   }
 }
 
+/** CONTACT */
 #contact {
+  // margin-top: 2em;
   padding: 1em;
   a {
-    margin: 0em 1em;
+    font-size: 1.4em;
+    padding: 0em 1em;
+    &:hover {
+      cursor: pointer;
+    }
   }
 }
 
+/** FOOTER */
 footer {
   ul {
     li {
       display: inline;
+      font-size: 1.4em;
+      padding: 0.4em;
     }
   }
   .google-logo {
