--- a/sass/style.scss
+++ b/sass/style.scss
@@ -41,6 +41,11 @@ header {
 @media only screen and (min-width: 601px) {
   nav {
     line-height: 96px;
+  }
+}
+
+@media only screen and (min-width: 769px) {
+  nav {
     .brand-logo {
       margin-left: 1em;
     }
@@ -49,7 +54,9 @@ header {
 
 /** TEAM */
 #team {
-  // height: 100vh;
+  h3 {
+    text-shadow: 1px 2px 1px #000;
+  }
   padding: 1em;
   .card-action {
     display: flex;
